add warning about not being able to open ConcurrentHashMap's `table` field in JDK 16, fixes #1462