@@ -1,5 +1,8 @@
 package crux.cache.second_chance;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.reflect.Field;
@@ -10,32 +13,39 @@ import java.util.concurrent.ConcurrentHashMap;
 public final class ConcurrentHashMapTableAccess {
     private static final MethodHandle TABLE_FIELD_METHOD_HANDLE;
 
+    private static final Logger LOGGER =
+        LoggerFactory.getLogger(ConcurrentHashMapTableAccess.class);
+
     static {
         try {
-            try {
-                Method getModule = Class.class.getDeclaredMethod("getModule");
-                Class<?> moduleClass = getModule.getReturnType();
-                Method isNamed = moduleClass.getDeclaredMethod("isNamed");
-                Method addOpens = moduleClass.getDeclaredMethod("addOpens", String.class, moduleClass);
+            Method getModule = Class.class.getDeclaredMethod("getModule");
+            Class<?> moduleClass = getModule.getReturnType();
+            Method isNamed = moduleClass.getDeclaredMethod("isNamed");
+            Method addOpens = moduleClass.getDeclaredMethod("addOpens", String.class, moduleClass);
 
-                Object thisModule = getModule.invoke(ConcurrentHashMapTableAccess.class);
-                if (!(boolean) isNamed.invoke(thisModule)) {
-                    Object javaBaseModule = getModule.invoke(ConcurrentHashMap.class);
-                    addOpens.invoke(javaBaseModule, ConcurrentHashMap.class.getPackage().getName(), thisModule);
-                }
-            } catch (Exception ignore) {
+            Object thisModule = getModule.invoke(ConcurrentHashMapTableAccess.class);
+            if (!(boolean) isNamed.invoke(thisModule)) {
+                Object javaBaseModule = getModule.invoke(ConcurrentHashMap.class);
+                addOpens.invoke(javaBaseModule, ConcurrentHashMap.class.getPackage().getName(), thisModule);
             }
+        } catch (Exception ignore) {
+        }
 
+        MethodHandle mh = null;
+        try {
             Field tableField = ConcurrentHashMap.class.getDeclaredField("table");
             tableField.setAccessible(true);
-            MethodHandle mh = MethodHandles.lookup().unreflectGetter(tableField);
-            TABLE_FIELD_METHOD_HANDLE = mh.asType(mh.type().changeReturnType(Object[].class));
+            mh = MethodHandles.lookup().unreflectGetter(tableField);
+            mh = mh.asType(mh.type().changeReturnType(Object[].class));
         } catch (Exception e) {
-            throw new RuntimeException(e);
+            LOGGER.warn("Could not open ConcurrentHashMap.table field - Crux's cache may perform badly in certain cases. Use `--add-opens java.base/java.util.concurrent=ALL-UNNAMED` to remove this warning.");
         }
+
+        TABLE_FIELD_METHOD_HANDLE = mh;
     }
 
     public static final <K, V> Object[] getConcurrentHashMapTable(final ConcurrentHashMap<K, V> map) throws Throwable {
+        if (TABLE_FIELD_METHOD_HANDLE == null) return null;
         return (Object[]) TABLE_FIELD_METHOD_HANDLE.invokeExact(map);
     }
 }
